--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,44 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  your_cart: "Your Cart"
+  product: "Item"
+  unit_price: "Price"
+  quantity: "Quantity"
+  checkout: "Checkout"
+  continue_shopping: "Continue Shopping"
+  delete: "Remove"
+  your_coupon: "Your Coupons"
+  menu_home: "Home"
+  menu_product: "Products"
+  menu_cart: "Cart"
+  menu_mobile_member_card: "Mobile Member"
+  menu_coupon: "Coupons"
+  menu_nearby_shops: "Nearby Shops"
+  menu_logout: "Logout"
+  today_sale_info: "Today's Sales"
+  news: "News"
+  show_qr_to_staff: "Please show this code to a staff"
+  name: "Name"
+  salutation: ""
+  birthdate: "Birthdate"
+  member_number: "Membership No."
+  points: "Points"
+  product_catalog: "Product Catalog"
+  add_to_cart: "Add to Cart"
+  login_greeting: "Login"
+  mail: "Mail Address"
+  password: "Password"
+  sign_up: "Sign up"
+  login: "Login"
+  show_nearby_shops: "Show Nearby Shops"
+  address: "Address"
+  phone: "Phone"
+  operating_hours: "Operating Hours"
+  user_edit: "Editing User"
+  user_new: "New User"
+  user_list: "User List"
+  show: "Show"
+  back: "Back"
+  edit: "Edit"
+  submit: "Submit"
