--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,3 @@
 Heroku Connect Demo in Japanese and English
-To deploy to heroku: heroku.com/deploy?template=https://github.com/yusukeoshiro/heroku_demo1
+To deploy to heroku:
+heroku.com/deploy?template=https://github.com/yusukeoshiro/heroku_demo1
