--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
 Heroku Connect Demo in Japanese and English
 
-To deploy to heroku:
-https://heroku.com/deploy?template=https://github.com/yusukeoshiro/heroku_demo1
+To deploy to heroku, click this heroku button:
+
+{<img src="https://www.herokucdn.com/deploy/button.svg" alt="code climate">}[https://heroku.com/deploy?template=https://github.com/yusukeoshiro/heroku_demo1]
+
